--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,12 @@
 os: linux
-dist: trusty
 language: python
 services: docker
 
-env:
-  global:
-    - BASE=compdatasci/spyder-desktop:latest
-
 before_script:
-  - docker --version
-  - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_USERPASS"
-  - docker pull $BASE
+  - git clone --depth=1 https://$GIT_TOKEN@github.com/xmjiao/ci-util.git 2> /dev/null
 
 script:
-  # Build only if the commit range of a push contains Dockerfile or .travis.yml
-  - '[[ "$TRAVIS_EVENT_TYPE" == "push" && -n "$TRAVIS_COMMIT_RANGE" &&
-        -n $(git log --since $(docker inspect $BASE | grep Created | perl -e "s/.+\"([\d-:T]+).+$/\$1/g" -p)) &&
-        -z "$(git diff --name-only $TRAVIS_COMMIT_RANGE |
-            grep -e Dockerfile -e .travis.yml -e image -e WELCOME)" ]] ||
-    (docker build --tag unifem/fenics-desktop:2017.1.0
-                  --tag unifem/fenics-desktop:latest . &&
-     docker push unifem/fenics-desktop &&
-     touch success)'
-  # Test startup scripts
-  - './fenics_desktop.py -d -n && docker stop $(docker ps -q) &&
-     ./fenics_jupyter.py -d -n && docker stop $(docker ps -q)'
-  - docker images
+  - './ci-util/build-docker.sh : :2017.1.0,latest &&
+     ./fenics_desktop.py -d -n && docker stop $(docker ps -q) &&
+     ./fenics_jupyter.py -d -n && docker stop $(docker ps -q) &&
+     ./ci-util/trigger-via-api.sh'
